--- a/gdl2/Mumtaz_score_for_readmission_in_cirrhosis.v1.test.yml
+++ b/gdl2/Mumtaz_score_for_readmission_in_cirrhosis.v1.test.yml
@@ -19,7 +19,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 67.3%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 49,1
+      gt0094|Mumtaz score: 49,1
 
 - id: Total score 48
   input:
@@ -39,7 +39,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 66.2%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 48,1
+      gt0094|Mumtaz score: 48,1
 
 - id: Total score 47
   input:
@@ -59,7 +59,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 65.1%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 47,1
+      gt0094|Mumtaz score: 47,1
 
 - id: Total score 46
   input:
@@ -79,7 +79,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 63.9%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 46,1
+      gt0094|Mumtaz score: 46,1
 
 - id: Total score 45
   input:
@@ -99,7 +99,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 62.8%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 45,1
+      gt0094|Mumtaz score: 45,1
 
 - id: Total score 44
   input:
@@ -119,7 +119,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 61.6%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 44,1
+      gt0094|Mumtaz score: 44,1
 
 - id: Total score 43
   input:
@@ -139,7 +139,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 60.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 43,1
+      gt0094|Mumtaz score: 43,1
 
 - id: Total score 42
   input:
@@ -159,7 +159,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 59.2%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 42,1
+      gt0094|Mumtaz score: 42,1
 
 - id: Total score 41
   input:
@@ -179,7 +179,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 58.0%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 41,1
+      gt0094|Mumtaz score: 41,1
 
 - id: Total score 40
   input:
@@ -199,7 +199,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 56.8%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 40,1
+      gt0094|Mumtaz score: 40,1
 
 - id: Total score 39
   input:
@@ -219,7 +219,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 55.5%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 39,1
+      gt0094|Mumtaz score: 39,1
 
 - id: Total score 38
   input:
@@ -239,7 +239,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 54.3%
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: 38,1
+      gt0094|Mumtaz score: 38,1
 
 - id: Total score 37
   input:
@@ -259,7 +259,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 53.1%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 37,1
+      gt0094|Mumtaz score: 37,1
 
 
 - id: Total score 36
@@ -280,7 +280,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 51.8%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 36,1
+      gt0094|Mumtaz score: 36,1
 
 - id: Total score 35
   input:
@@ -300,7 +300,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 50.6%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 35,1
+      gt0094|Mumtaz score: 35,1
 
 - id: Total score 34
   input:
@@ -320,7 +320,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 49.3%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 34,1
+      gt0094|Mumtaz score: 34,1
 
 - id: Total score 33
   input:
@@ -340,7 +340,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 48.1%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 33,1
+      gt0094|Mumtaz score: 33,1
 
 - id: Total score 32
   input:
@@ -360,7 +360,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 46.8%
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: 32,1
+      gt0094|Mumtaz score: 32,1
 
 - id: Total score 31
   input:
@@ -380,7 +380,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 45.6%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 31,1
+      gt0094|Mumtaz score: 31,1
 
 - id: Total score 30
   input:
@@ -400,7 +400,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 44.3%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 30,1
+      gt0094|Mumtaz score: 30,1
 
 - id: Total score 29
   input:
@@ -420,7 +420,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 43.1%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 29,1
+      gt0094|Mumtaz score: 29,1
 
 - id: Total score 28
   input:
@@ -440,7 +440,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 41.9%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 28,1
+      gt0094|Mumtaz score: 28,1
 
 - id: Total score 27
   input:
@@ -460,7 +460,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 40.7%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 27,1
+      gt0094|Mumtaz score: 27,1
 
 - id: Total score 26
   input:
@@ -480,7 +480,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 39.5%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 26,1
+      gt0094|Mumtaz score: 26,1
 
 - id: Total score 25
   input:
@@ -500,7 +500,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 38.3%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 25,1
+      gt0094|Mumtaz score: 25,1
 
 - id: Total score 24
   input:
@@ -520,7 +520,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 37.1%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 24,1
+      gt0094|Mumtaz score: 24,1
 
 - id: Total score 23
   input:
@@ -540,7 +540,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 36.0%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 23,1
+      gt0094|Mumtaz score: 23,1
 
 - id: Total score 22
   input:
@@ -560,7 +560,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 34.8%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 22,1
+      gt0094|Mumtaz score: 22,1
 
 - id: Total score 21
   input:
@@ -580,7 +580,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 33.7%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 21,1
+      gt0094|Mumtaz score: 21,1
 
 - id: Total score 20
   input:
@@ -600,7 +600,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 32.6%
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: 20,1
+      gt0094|Mumtaz score: 20,1
 
 - id: Total score 19
   input:
@@ -620,7 +620,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 31.5%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 19,1
+      gt0094|Mumtaz score: 19,1
 
 
 - id: Total score 18
@@ -641,7 +641,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 30.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 18,1
+      gt0094|Mumtaz score: 18,1
 
 - id: Total score 17
   input:
@@ -661,7 +661,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 29.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 17,1
+      gt0094|Mumtaz score: 17,1
 
 - id: Total score 16
   input:
@@ -681,7 +681,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 28.3%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 16,1
+      gt0094|Mumtaz score: 16,1
 
 - id: Total score 15
   input:
@@ -701,7 +701,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 27.3%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 15,1
+      gt0094|Mumtaz score: 15,1
 
 - id: Total score 14
   input:
@@ -721,7 +721,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 26.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 14,1
+      gt0094|Mumtaz score: 14,1
 
 - id: Total score 13
   input:
@@ -741,7 +741,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 25.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 13,1
+      gt0094|Mumtaz score: 13,1
 
 - id: Total score 12
   input:
@@ -761,7 +761,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 24.5%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 12,1
+      gt0094|Mumtaz score: 12,1
 
 - id: Total score 11
   input:
@@ -781,7 +781,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 23.6%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 11,1
+      gt0094|Mumtaz score: 11,1
 
 - id: Total score 10
   input:
@@ -801,7 +801,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 22.7%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 10,1
+      gt0094|Mumtaz score: 10,1
 
 - id: Total score 9
   input:
@@ -821,7 +821,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 21.8%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 9,1
+      gt0094|Mumtaz score: 9,1
 
 - id: Total score 8
   input:
@@ -841,7 +841,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 21.0%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 8,1
+      gt0094|Mumtaz score: 8,1
 
 - id: Total score 7
   input:
@@ -861,7 +861,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 20.1%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 7,1
+      gt0094|Mumtaz score: 7,1
 
 - id: Total score 6
   input:
@@ -881,7 +881,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 19.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 6,1
+      gt0094|Mumtaz score: 6,1
 
 - id: Total score 5
   input:
@@ -901,7 +901,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 18.6%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 5,1
+      gt0094|Mumtaz score: 5,1
 
 - id: Total score 4
   input:
@@ -921,7 +921,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 17.8%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 4,1
+      gt0094|Mumtaz score: 4,1
 
 - id: Total score 3
   input:
@@ -941,7 +941,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 17.1%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 3,1
+      gt0094|Mumtaz score: 3,1
 
 - id: Total score 2
   input:
@@ -961,7 +961,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 16.4%
       gt0031|Age, years: 7|local::at0007|18-39|
-      gt0094|Total score: 2,1
+      gt0094|Mumtaz score: 2,1
 
 - id: Total score 1
   input:
@@ -981,7 +981,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 15.7%
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: 1,1
+      gt0094|Mumtaz score: 1,1
 
 - id: Total score 0
   input:
@@ -1001,7 +1001,7 @@ test_cases:
     1:
       gt0015|30-day readmission risk: 15.1%
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: 0,1
+      gt0094|Mumtaz score: 0,1
 
 - id: Total score -1
   input:
@@ -1020,7 +1020,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: -1,1
+      gt0094|Mumtaz score: -1,1
 
 - id: Total score -2
   input:
@@ -1039,7 +1039,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: -2,1
+      gt0094|Mumtaz score: -2,1
 
 - id: Total score -3
   input:
@@ -1058,7 +1058,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: -3,1
+      gt0094|Mumtaz score: -3,1
 
 - id: Total score -4
   input:
@@ -1077,7 +1077,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -4,1
+      gt0094|Mumtaz score: -4,1
 
 - id: Total score -5
   input:
@@ -1096,7 +1096,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -5,1
+      gt0094|Mumtaz score: -5,1
 
 - id: Total score -6
   input:
@@ -1115,7 +1115,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 4|local::at0006|40-65|
-      gt0094|Total score: -6,1
+      gt0094|Mumtaz score: -6,1
 
 - id: Total score -7
   input:
@@ -1134,7 +1134,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -7,1
+      gt0094|Mumtaz score: -7,1
 
 - id: Total score -8
   input:
@@ -1153,7 +1153,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -8,1
+      gt0094|Mumtaz score: -8,1
 
 - id: Total score -9
   input:
@@ -1172,7 +1172,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -9,1
+      gt0094|Mumtaz score: -9,1
 
 - id: Total score -10
   input:
@@ -1191,7 +1191,7 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -10,1
+      gt0094|Mumtaz score: -10,1
 
 - id: Total score -11
   input:
@@ -1210,4 +1210,4 @@ test_cases:
   expected_output:
     1:
       gt0031|Age, years: 0|local::at0005|≥65|
-      gt0094|Total score: -11,1
+      gt0094|Mumtaz score: -11,1
