--- a/gdl2/Diagnostic_Criteria_FH.v1.test.yml
+++ b/gdl2/Diagnostic_Criteria_FH.v1.test.yml
@@ -1,272 +1,219 @@
 guidelines:
   1: Diagnostic_Criteria_FH.v1
 test_cases:
-- id: Test no input
-  input:
-    1: {}
-  expected_output:
-    1: {}
-- id: Test cutoff value for <20 1st degree FH, Cholesterol <5.7
+- id: 1. Age <20 yrs, 1st Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.5,mmol/l
-      gt0047|Age: 0,a
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.4,mmol/l
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 0
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for <20 1st degree FH, Cholesterol >5.7
+      gt0013|Interpretation: Unlikely FH
+- id: 2. Age <20 yrs, 1st Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.8,mmol/l
-      gt0047|Age: 0,a
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 0
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for <20 2nd degree FH, Cholesterol <5.9
+      gt0013|Interpretation: Definite FH
+- id: 3. Age <20 yrs, 2nd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 5.8,mmol/l
-      gt0047|Age: 0,a
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 1
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for <20 2nd degree FH, Cholesterol >5.9
+      gt0013|Interpretation: Unlikely FH
+- id: 4. Age <20 yrs, 2nd Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6,mmol/l
-      gt0047|Age: 0,a
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 1
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for <20 3rd degree FH, Cholesterol <6.2
+      gt0013|Interpretation: Definite FH
+- id: 5. Age <20 yrs, 3rd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6,mmol/l
+  expected_output:
+    1:
+      gt0013|Interpretation: Unlikely FH
+- id: 6. Age <20 yrs, 3rd Degree relative, Definite FH
+  input:
+    1:
+      gt0004|Age, years: local::at0018|<20|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.4,mmol/l
+  expected_output:
+    1:
+      gt0013|Interpretation: Definite FH
+- id: 7. Age 20-29, 1st Degree relative, unlikely FH
+  input:
+    1:
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.1,mmol/l
-      gt0047|Age: 0,a
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 2
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for <20 3rd degree FH, Cholesterol >6.2
+      gt0013|Interpretation: Unlikely FH
+- id: 8. Age 20-29, 1st Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.3,mmol/l
-      gt0047|Age: 0,a
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.5,mmol/l
   expected_output:
     1:
-      gt0054|Age: 0|local::at0009|<20|
-      gt0007|Total score: 2
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 1st degree FH, Cholesterol <6.2
+      gt0013|Interpretation: Definite FH
+- id: 9. Age 20-29, 2nd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.1,mmol/l
-      gt0047|Age: 25,a
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.4,mmol/l
   expected_output:
     1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 3
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 20-29 1st degree FH, Cholesterol >6.2
+      gt0013|Interpretation: Unlikely FH
+- id: 10. Age 20-29, 2nd Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.3,mmol/l
-      gt0047|Age: 25,a
-  expected_output:
-    1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 3
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 2nd degree FH, Cholesterol <6.5
-  input:
-    1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.3,mmol/l
-      gt0047|Age: 25,a
-  expected_output:
-    1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 4
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 20-29 2nd degree FH, Cholesterol >6.5
-  input:
-    1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.6,mmol/l
-      gt0047|Age: 25,a
-  expected_output:
-    1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 4
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 20-29 3rd degree FH, Cholesterol <6.7
-  input:
-    1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.6,mmol/l
-      gt0047|Age: 25,a
-  expected_output:
-    1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 5
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 20-29 3rd degree FH, Cholesterol >6.7
-  input:
-    1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.8,mmol/l
-      gt0047|Age: 25,a
   expected_output:
     1:
-      gt0054|Age: 3|local::at0010|20-29|
-      gt0007|Total score: 5
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 1st degree FH, Cholesterol <7
+      gt0013|Interpretation: Definite FH
+- id: 11. Age 20-29, 3rd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.6,mmol/l
+  expected_output:
+    1:
+      gt0013|Interpretation: Unlikely FH
+- id: 12. Age 20-29, 3rd Degree relative, Definite FH
+  input:
+    1:
+      gt0004|Age, years: local::at0019|20-29|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.9,mmol/l
-      gt0047|Age: 35,a
   expected_output:
     1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 6
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 30-39 1st degree FH, Cholesterol >7
+      gt0013|Interpretation: Definite FH
+- id: 13. Age 30-39, 1st Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.1,mmol/l
-      gt0047|Age: 35,a
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 6.9,mmol/l
   expected_output:
     1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 6
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 2nd degree FH, Cholesterol <7.2
+      gt0013|Interpretation: Unlikely FH
+- id: 14. Age 30-39, 1st Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.1,mmol/l
-      gt0047|Age: 35,a
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7,mmol/l
   expected_output:
     1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 7
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 30-39 2nd degree FH, Cholesterol >7.2
+      gt0013|Interpretation: Definite FH
+- id: 15. Age 30-39, 2nd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.3,mmol/l
-      gt0047|Age: 35,a
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7,mmol/l
   expected_output:
     1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 7
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for 30-39 3rd degree FH, Cholesterol <7.5
+      gt0013|Interpretation: Unlikely FH
+- id: 16. Age 30-39, 2nd Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.4,mmol/l
-      gt0047|Age: 35,a
   expected_output:
     1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 8
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for 30-39 3rd degree FH, Cholesterol >7.5
+      gt0013|Interpretation: Definite FH
+- id: 17. Age 30-39, 3rd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.6,mmol/l
-      gt0047|Age: 35,a
-  expected_output:
-    1:
-      gt0054|Age: 6|local::at0011|30-39|
-      gt0007|Total score: 8
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 1st degree FH, Cholesterol <7.5
-  input:
-    1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
       'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.4,mmol/l
-      gt0047|Age: 45,a
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 9
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for >40 1st degree FH, Cholesterol >7.5
+      gt0013|Interpretation: Unlikely FH
+- id: 18. Age 30-39, 3rd Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 0|local::at0013|1st Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.6,mmol/l
-      gt0047|Age: 45,a
+      gt0004|Age, years: local::at0020|30-39|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.8,mmol/l
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 9
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 2nd degree FH, Cholesterol <7.8
+      gt0013|Interpretation: Definite FH
+- id: 19. Age >40, 1st Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.7,mmol/l
-      gt0047|Age: 45,a
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 280,mg/dl
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 10
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for >40 2nd degree FH, Cholesterol >7.8
+      gt0013|Interpretation: Unlikely FH
+- id: 20. Age >40, 1st Degree relative, Definite FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 1|local::at0014|2nd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.9,mmol/l
-      gt0047|Age: 45,a
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0022|1st Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 290,mg/dl
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 10
-      gt0013|Interpretation: Definite
-- id: Test cutoff value for >40 3rd degree FH, Cholesterol <8
+      gt0013|Interpretation: Definite FH
+- id: 21. Age >40, 2nd Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 7.9,mmol/l
-      gt0047|Age: 45,a
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 290,mg/dl
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 11
-      gt0013|Interpretation: Unlikely
-- id: Test cutoff value for >40 3rd degree FH, Cholesterol >8
+      gt0013|Interpretation: Unlikely FH
+- id: 22. Age >40, 1st Degree relative, unlikely FH
   input:
     1:
-      gt0005|Closest degree relative with confirmed FH diagnosis: 2|local::at0015|3rd Degree|
-      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 8.1,mmol/l
-      gt0047|Age: 45,a
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0023|2nd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 300,mg/dl
   expected_output:
     1:
-      gt0054|Age: 9|local::at0012|>40|
-      gt0007|Total score: 11
-      gt0013|Interpretation: Definite
+      gt0013|Interpretation: Definite FH
+- id: 23. Age >40, 3rd Degree relative, unlikely FH
+  input:
+    1:
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 300,mg/dl
+  expected_output:
+    1:
+      gt0013|Interpretation: Unlikely FH
+- id: 24. Age >40, 1st Degree relative, Definite FH
+  input:
+    1:
+      gt0004|Age, years: local::at0021|>40|
+      gt0005|Closest degree relative with confirmed FH diagnosis: local::at0024|3rd Degree|
+      'gt0015|Total Cholesterol (Norm: 3.9 - 5.2 mmol/L)': 320,mg/dl
+  expected_output:
+    1:
+      gt0013|Interpretation: Definite FH
