--- a/gdl2/Progesterone_to_Estrogen_Ratio.v1.test.yml
+++ b/gdl2/Progesterone_to_Estrogen_Ratio.v1.test.yml
@@ -14,6 +14,8 @@ test_cases:
   expected_output:
     1:
       gt0006|Pg/E2: 5.00,1
+      gt0021|Normal range value of Pg/E2: 100-500 if E2 within normal luteal phase range (i.e. 1.3-3.3 pg/mL in saliva or 43-180 pg/mL in blood spot)
+
 - id: Test ng/mL units
   input:
     1:
@@ -22,6 +24,8 @@ test_cases:
   expected_output:
     1:
       gt0006|Pg/E2: 5.00,1
+      gt0021|Normal range value of Pg/E2: 100-500 if E2 within normal luteal phase range (i.e. 1.3-3.3 pg/mL in saliva or 43-180 pg/mL in blood spot)
+
 - id: Test pmol/L and nmol/L units
   input:
     1:
@@ -30,3 +34,5 @@ test_cases:
   expected_output:
     1:
       gt0006|Pg/E2: 5772.78,1
+      gt0021|Normal range value of Pg/E2: 100-500 if E2 within normal luteal phase range (i.e. 1.3-3.3 pg/mL in saliva or 43-180 pg/mL in blood spot)
+
