--- a/gdl2/Modified_Aldrete_Score_guideline.v1.test.yml
+++ b/gdl2/Modified_Aldrete_Score_guideline.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: Modified_Aldrete_Score_guideline.v1
 test_cases:
-- id: total score, all variables have max values
+- id: Total score, all variables have max values
   input:
     1:
       gt0003|Consciousness: 2|local::at0005|Fully awake|
