--- a/gdl2/PDSS_SR.v1.test.yml
+++ b/gdl2/PDSS_SR.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: PDSS_SR.v1
 test_cases:
-- id: case_1:Total score = 0
+- id: 1. Total score = 0
   input:
     1:
       gt0003|Q1. No of attacks: 0|local::at0014|No panic or limited symptom episodes|
@@ -15,10 +15,9 @@ test_cases:
     1:
       gt0033|Total raw score: 0
       gt0019|Total composite score: 0
-      gt0036|Raw score interpretation - without Agoraphobia: 0|local::at0004|Normal|
-      gt0035|Raw score interpretation - with Agoraphobia: 0|local::at0012|Normal|
-
-- id: case_2:Total score = 1
+      gt0036|Raw score interpretation - without Agoraphobia: Normal
+      gt0035|Raw score interpretation - with Agoraphobia: Normal
+- id: 2. Total score = 1
   input:
     1:
       gt0003|Q1. No of attacks: 1|local::at0015|Mild|
@@ -32,10 +31,9 @@ test_cases:
     1:
       gt0033|Total raw score: 7
       gt0019|Total composite score: 1
-      gt0036|Raw score interpretation - without Agoraphobia: 2|local::at0017|Slightly ill|
-      gt0035|Raw score interpretation - with Agoraphobia: 1|local::at0013|Borderline|
-
-- id: case_3:Total score = 2
+      gt0036|Raw score interpretation - without Agoraphobia: Slightly ill
+      gt0035|Raw score interpretation - with Agoraphobia: Borderline
+- id: 3. Total score = 2
   input:
     1:
       gt0003|Q1. No of attacks: 2|local::at0016|Moderate|
@@ -49,10 +47,9 @@ test_cases:
     1:
       gt0033|Total raw score: 14
       gt0019|Total composite score: 2
-      gt0036|Raw score interpretation - without Agoraphobia: 4|local::at0019|Markedly ill|
-      gt0035|Raw score interpretation - with Agoraphobia: 3|local::at0015|Moderately ill|
-
-- id: case_4:Total score = 3
+      gt0036|Raw score interpretation - without Agoraphobia: Markedly ill
+      gt0035|Raw score interpretation - with Agoraphobia: Moderately ill
+- id: 4. Total score = 3
   input:
     1:
       gt0003|Q1. No of attacks: 3|local::at0017|Severe |
@@ -66,10 +63,9 @@ test_cases:
     1:
       gt0033|Total raw score: 21
       gt0019|Total composite score: 3
-      gt0036|Raw score interpretation - without Agoraphobia: 4|local::at0019|Markedly ill|
-      gt0035|Raw score interpretation - with Agoraphobia: 4|local::at0016|Markedly ill|
-
-- id: case_5:Total score = 4
+      gt0036|Raw score interpretation - without Agoraphobia: Markedly ill
+      gt0035|Raw score interpretation - with Agoraphobia: Markedly ill
+- id: 5. Total score = 4
   input:
     1:
       gt0003|Q1. No of attacks: 4|local::at0018|Extreme|
@@ -83,5 +79,5 @@ test_cases:
     1:
       gt0033|Total raw score: 28
       gt0019|Total composite score: 4
-      gt0036|Raw score interpretation - without Agoraphobia: 4|local::at0019|Markedly ill|
-      gt0035|Raw score interpretation - with Agoraphobia: 4|local::at0016|Markedly ill|
+      gt0036|Raw score interpretation - without Agoraphobia: Markedly ill
+      gt0035|Raw score interpretation - with Agoraphobia: Markedly ill
